# sru-generator

./: .gitignore  CLAUDE.md  DISCLAIMER.md  GITHUB_SETUP.md  LICENSE  MIGRATION_GUIDE.md  PUBLISH_TO_GITHUB.md  README.md  SETUP_GUIDE.md  activate_venv.bat  activate_venv.ps1  install_local.py  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: advanced_usage.py  basic_usage.py  enhanced_usage.py  flexible_character_conversion.py  sample_trades.json
sru_generator/: __init__.py  builders.py  character_converters.py  cli.py  config.py  currency.py  exceptions.py  models.py  sru_generator.py  utils.py  validators.py
tests/: __init__.py  test_cli.py  test_enhanced_features.py  test_sru_generator.py
